


beta 0.9 (in development)
-------------------------
- new mode "--density" allows to compute a 1-D, 2-D or 3-D density profile of a given property (mass, electric charge...).
- new mode "--central-symmetry" allows to compute a central symmetry parameter.
- new option "-neutralize"
- added support for reading and writing files in CEL format. Thanks to Juri Barthel, RWTH Aachen, Germany, for implementing this file format.
- enhanced support for CIF format. Thanks to Juri Barthel, RWTH Aachen, Germany, for implementing this feature.
- in mode "--create", added possibility to generate wurtzite lattices.
- in option "-select", added possibility to read a list of atom indices from a file.
- added support for ionic core-shell models in LAMMPS data and custom files. Also added support for 2-D systems in these file formats.
- faster algorithm for neighbor search, based on cell decomposition. Thanks to Srinivasan Mahendran, UMET, Lille, France, for his help with the implementation of this feature.
- fixed a bug in the displaying of progress bar that slowed down the program.
- l10n: added the German translations of the messages. Thanks to Juri Barthel, RWTH Aachen, Germany, for translating Atomsk.



beta 0.8.2 (14 June 2015)
-------------------------
- fixed a bug that caused a crash when reading LAMMPS data files that contained fewer atoms than declared.


beta 0.8.1 (09 April 2015)
--------------------------
- in mode "--create", added possibility to generate L12 lattices. Thanks to Jonathan Amodeo, MATEIS, Lyon, France, for proposing this feature.
- fixed a bug in option "-dislocation" that prevented to read the Burgers vector when the type was "edge2". Thanks to Anirban Pal, Rensselaer Polytechnic Institute, New York, USA, for reporting this bug.


beta 0.8 (05 Jan. 2015)
-----------------------