@@ -13,7 +13,7 @@
 
 <p><strong><em>Atom</em>/<em>M</em>olecule/<em>M</em>aterial <em>S</em>oftware <em>K</em>it</strong></p>
 
-<p>&copy; Pierre Hirel 2010 - Version Beta 0.9-2015.08.04</p>
+<p>&copy; Pierre Hirel 2010 - Version Beta 0.9-2015.08.05</p>
 
 
 
@@ -61,6 +61,7 @@
     <li><a href="./option_sort.html">sort</a> - Change the order in which atoms are written</li>
     <li><a href="./option_stress.html">stress</a> - Apply stress to the system</li>
     <li><a href="./option_substitute.html">substitute</a> - Replace atoms by other atoms</li>
+    <li><a href="./option_swap.html">swap</a> - Swap the positions of two atoms</li>
     <li><a href="./option_unit.html">unit</a> - Change the unit of coordinates</li>
     <li><a href="./option_unskew.html">unskew</a> - Reduce the skew of the box</li>
     <li><a href="./option_velocity.html">velocity</a> - Create a Maxwell-Boltzmann distribution of velocities</li>
