@@ -60,6 +60,7 @@
     <li><a href="./option_sort.html">sort</a> - Change the order in which atoms are written</li>
     <li><a href="./option_stress.html">stress</a> - Apply stress to the system</li>
     <li><a href="./option_substitute.html">substitute</a> - Replace atoms by other atoms</li>
+    <li><a href="./option_swap.html">swap</a> - Swap the positions of two atoms</li>
     <li><a href="./option_unit.html">unit</a> - Change the unit of coordinates</li>
     <li><a href="./option_unskew.html">unskew</a> - Reduce the skew of the box</li>
     <li><a href="./option_velocity.html">velocity</a> - Create a Maxwell-Boltzmann distribution of velocities</li>
