@@ -13,7 +13,7 @@
 
 <p><strong><em>Atom</em>/<em>M</em>olecule/<em>M</em>aterial <em>S</em>oftware <em>K</em>it</strong></p>
 
-<p>&copy; Pierre Hirel 2010 - Version Beta 0.9-2015.08.04</p>
+<p>&copy; Pierre Hirel 2010 - Version Beta 0.9-2015.08.05</p>
 
 
 
@@ -61,6 +61,7 @@
     <li><a href="./option_sort.html">sort</a> - Changer l'ordre dans lequel les atomes sont rangés</li>
     <li><a href="./option_stress.html">stress</a> - Appliquer une contrainte au système</li>
     <li><a href="./option_substitute.html">substitute</a> - Remplacer des atomes par d'autres atomes</li>
+    <li><a href="./option_swap.html">swap</a> - Échanger les positions de deux atomes</li>
     <li><a href="./option_unit.html">unit</a> - Changer de système d'unités</li>
     <li><a href="./option_unskew.html">unskew</a> - Réduire le cisaillement de la boîte</li>
     <li><a href="./option_velocity.html">velocity</a> - Générer une distribution de vitesses de Maxwell-Boltzmann</li>
