@@ -1,0 +1,46 @@
+<!DOCTYPE html>
+<html lang="fr" >
+<head>
+    <title>Option swap - Atomsk - Pierre Hirel</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" media="screen" type="text/css" title="Default" href="./default.css" />
+    <link rel="icon" href="../img/atomsk_logo.png" type="image/png" />
+</head>
+   
+<body>
+
+<p><a href="./index.html">Retour au menu principal</a></p>
+
+<h2>Option : swap</h2>
+
+<h4>Syntaxe</h4>
+
+<p><code>-swap &#60;id1&#62; &#60;id2&#62;</code></p>
+
+
+<h4>Description</h4>
+
+<p>Cette options échange les positions des atomes ayant les deux indices donnés.</p>
+
+<p>Si des coquilles (dans le cadre d'un modèle ionique c&oelig;ur-coquille) et/ou des propriétés auxiliaires sont définies, alors elles seront aussi échangées.</p>
+
+
+<h4>Défaut</h4>
+
+<p>Par défaut aucun atome n'est échangé.</p>
+
+
+
+<h4>Exemples</h4>
+
+<ul>
+<li><code class="command">atomsk initial.cfg -swap 530 1065 final.xsf</code>
+<p>Ceci va lire le fichier <code>initial.cfg</code>, et échangera les atomes 530 et 1065. Le résultat final sera écrit dans le fichier <code>final.xsf</code>.</p></li>
+
+</ul>
+
+<p><a href="./index.html">Retour au menu principal</a></p>
+
+</body>
+
+</html>
