@@ -368,6 +368,11 @@ IF(helpsection=="options" .OR. helpsection=="-substitute" .OR. helpsection=="-su
   WRITE(*,*) "          -sub <sp1> <sp2>"
 ENDIF
 !
+IF(helpsection=="options" .OR. helpsection=="-swap") THEN
+  WRITE(*,*) "..> Swap two atoms:"
+  WRITE(*,*) "          -swap <id1> <id2>"
+ENDIF
+!
 IF(helpsection=="options" .OR. helpsection=="-unit" .OR. helpsection=="-u") THEN
   WRITE(*,*) "..> Convert coordinates to another unit:"
   WRITE(*,*) "          -u <unit1> <unit2>"
@@ -1589,6 +1594,16 @@ CASE(2124)
   CASE DEFAULT
     msg = ">>> Applying a stress state as read from "//TRIM(ADJUSTL(temp))//"."
   END SELECT
+  CALL DISPLAY_MSG(verbosity,msg,logfile)
+CASE(2125)
+  !reals(1) = index of first atom
+  !reals(2) = index of second atom
+  WRITE(temp,*) NINT(reals(1))
+  WRITE(temp2,*) NINT(reals(2))
+  msg = ">>> Swapping atoms #"//TRIM(ADJUSTL(temp))//" and #"//TRIM(ADJUSTL(temp2))
+  CALL DISPLAY_MSG(verbosity,msg,logfile)
+CASE(2126)
+  msg = "..> Atoms were swapped."
   CALL DISPLAY_MSG(verbosity,msg,logfile)
 !
 !2700-2799: WARNING MESSAGES
