@@ -12,6 +12,7 @@ beta 0.9 (in development)
 - new mode "--density" allows to compute a 1-D, 2-D or 3-D density profile of a given property (mass, electric charge...).
 - new mode "--central-symmetry" allows to compute a central symmetry parameter.
 - new option "-neutralize"
+- new option "-swap" allows to exchange the indices of two atoms.
 - added support for reading and writing files in CEL format. Thanks to Juri Barthel, RWTH Aachen, Germany, for implementing this file format.
 - enhanced support for CIF format. Thanks to Juri Barthel, RWTH Aachen, Germany, for implementing this feature.
 - in mode "--create", added possibility to generate wurtzite lattices.
